--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -157,5 +157,10 @@
     "accept_1": " zu und habe die ",
     "accept_2": " zur Kenntnis genommen.",
     "accept": "Bitte akzeptiere die Datenschutzerklärung und die Nutzungsbedingungen."
+  },
+  "footer": {
+    "reference_0": "Ein Produkt von",
+    "reference_1": "und dem",
+    "sh": "Land Schleswig-Holstein"
   }
 }
