--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -66,6 +66,9 @@
         "description": "Beschreibung",
         "descriptionOptional": "Beschreibung (optional)",
         "tooLong": "Die Beschreibung ist zu lang."
+      },
+      "url": {
+        "url": "Umfrage-URL"
       }
     }
   },
