fix: add deletion info to summaries

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -69,6 +69,10 @@
       },
       "url": {
         "url": "Umfrage-URL"
+      },
+      "delete": {
+        "deleteDate": "Löschfrist",
+        "willBeDeleted": "Die Terminabfrage wird eine Woche nach dem letzten Termindatum gelöscht."
       }
     }
   },
