feat(i18n): add localization texts for hardcoded texts

--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -40,6 +40,16 @@
     "send": "Send",
     "downloadIcs": "Download this date as .ics-File to import it to your calendar. Check the voting of your participants in the description.",
     "downloadCsv": "Download the table of participants and their voting. You can import it into Excel and plan your event.",
+    "csvExport": {
+      "fileTitlePrefix": "Poll",
+      "participants": "Participants",
+      "statusAccepted": "accepted",
+      "statusQuestionable": "questionable",
+      "statusDeclined": "declined",
+      "statusUnknown": "unknown",
+      "timeAt": "at {{time}}",
+      "dateTo": "to {{date}}"
+    },
     "title": {
       "title": "Title",
       "set": "Set a title!",
