--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -40,6 +40,16 @@
     "send": "Abschicken",
     "downloadIcs": "Lade dieses Datum als .ics-Datei herunter und importiere es in deinen Kalender. Erfahre in der Beschreibung des Termins, wie die Teilnehmenden abgestimmt haben.",
     "downloadCsv": "Lade die Tabelle der Teilnehmenden mit ihren Entscheidungen herunter. Du kannst sie in Excel importieren, um deine Veranstaltung besser zu planen.",
+    "csvExport": {
+      "fileTitlePrefix": "Umfrage",
+      "participants": "Teilnehmer:innen",
+      "statusAccepted": "zugesagt",
+      "statusQuestionable": "vorbehaltlich",
+      "statusDeclined": "abgelehnt",
+      "statusUnknown": "unbekannt",
+      "timeAt": "um {{time}}",
+      "dateTo": "bis {{date}}"
+    },
     "title": {
       "title": "Titel",
       "set": "Gib Deiner Umfrage einen Titel!",
