--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -40,6 +40,16 @@
     "send": "Abschicken",
     "downloadIcs": "Laden Sie dieses Datum als .ics-Datei herunter und importieren Sie es in deinen Kalender. Erfahren Sie in der Beschreibung des Termins, wie die Teilnehmer:innen abgestimmt haben.",
     "downloadCsv": "Laden Sie die Tabelle der Teilnehmenden mit ihren Entscheidungen herunter. Sie können sie in Excel importieren, um Ihre Veranstaltung besser zu planen.",
+    "csvExport": {
+      "fileTitlePrefix": "Umfrage",
+      "participants": "Teilnehmer:innen",
+      "statusAccepted": "zugesagt",
+      "statusQuestionable": "vorbehaltlich",
+      "statusDeclined": "abgelehnt",
+      "statusUnknown": "unbekannt",
+      "timeAt": "um {{time}}",
+      "dateTo": "bis {{date}}"
+    },
     "title": {
       "title": "Titel",
       "set": "Geben Sie Ihrer Umfrage einen Titel!",
