--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -40,16 +40,6 @@
     "send": "Abschicken",
     "downloadIcs": "Laden Sie dieses Datum als .ics-Datei herunter und importieren Sie es in deinen Kalender. Erfahren Sie in der Beschreibung des Termins, wie die Teilnehmer:innen abgestimmt haben.",
     "downloadCsv": "Laden Sie die Tabelle der Teilnehmenden mit ihren Entscheidungen herunter. Sie können sie in Excel importieren, um Ihre Veranstaltung besser zu planen.",
-    "csvExport": {
-      "fileTitlePrefix": "Umfrage",
-      "participants": "Teilnehmer:innen",
-      "statusAccepted": "zugesagt",
-      "statusQuestionable": "vorbehaltlich",
-      "statusDeclined": "abgelehnt",
-      "statusUnknown": "unbekannt",
-      "timeAt": "um {{time}}",
-      "dateTo": "bis {{date}}"
-    },
     "title": {
       "title": "Titel",
       "set": "Geben Sie Ihrer Umfrage einen Titel!",
@@ -86,7 +76,14 @@
       }
     }
   },
+  "votingStatus": {
+    "accepted": "zugesagt",
+    "questionable": "vorbehaltlich",
+    "declined": "abgelehnt",
+    "unknown": "unbekannt"
+  },
   "date": {
+    "dateTo": "bis {{date}}",
     "choose": "Wählen Sie Ihre Termine aus!",
     "change": "Ändern Sie Ihre Termine!",
     "delete": "Löschen Sie das Datum",
@@ -111,6 +108,7 @@
   },
   "time": {
     "time": "Uhrzeit",
+    "timeAt": "um {{time}}",
     "add": "Zeiten hinzufügen",
     "start": "Startzeit",
     "placeholder": "HH:MM",
