--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -39,16 +39,6 @@
     "send": "Afschicken",
     "downloadIcs": "Lader vun dissen Dag as ics-Datei dal un importeer dat in dien Kalenner.",
     "downloadCsv": ".",
-    "csvExport": {
-      "fileTitlePrefix": "Umfraag",
-      "participants": "Deelnehmer:innen",
-      "statusAccepted": ".",
-      "statusQuestionable": ".",
-      "statusDeclined": ".",
-      "statusUnknown": ".",
-      "timeAt": ".",
-      "dateTo": "."
-    },
     "title": {
       "title": "Titel",
       "set": "Geev Diner Umfraag en Titel!",
@@ -78,7 +68,14 @@
       }
     }
   },
+  "votingStatus": {
+    "accepted": ".",
+    "questionable": ".",
+    "declined": ".",
+    "unknown": "."
+  },
   "date": {
+    "dateTo": ".",
     "choose": "Wähl dien Termin ut!",
     "change": "Ännern dien Termin!",
     "delete": "Lösch dat Datum",
@@ -103,6 +100,7 @@
   },
   "time": {
     "time": "Uhrtied",
+    "timeAt": ".",
     "add": "Tieden toföög",
     "start": "Starttiet",
     "placeholder": "HH:MM",
