--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -9,6 +9,9 @@
     "revise": "Überarbeiten",
     "step": "Schritt"
   },
+  "header": {
+    "navLabel": "Sprachmenü"
+  },
   "home": {
     "planning": "Planung",
     "security": "Sicherheit",
@@ -177,8 +180,16 @@
     "accept": "Bitte akzeptiere die Datenschutzerklärung und die Nutzungsbedingungen."
   },
   "footer": {
-    "reference_0": "Ein Produkt von",
-    "reference_1": "und dem",
-    "sh": "Land Schleswig-Holstein"
+    "navLabel": {
+      "contact": "Kontakt",
+      "imprint": "Impressum",
+      "ossCode": "Links zum Quellcode",
+      "reference": "Referenz"
+    },
+    "reference": {
+      "0": "Ein Produkt von",
+      "1": "und dem",
+      "sh": "Land Schleswig-Holstein"
+    }
   }
 }
