feat(DAB-17): change return button to mimic browser return behavior instead of returning to the start

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -128,7 +128,7 @@
   "accessibility": {
     "accessibility": "Barrierefreiheit",
     "plainLanguage": {
-      "backToTheFuture": "Zurück zur Startseite",
+      "backToTheFuture": "Zurück",
       "content": "Herzlich willkommen.\nDu findest hier Informationen über Dataport in Leichter Sprache.\nAlle Menschen können Texte in Leichter Sprache besser verstehen.",
       "header": "Leichte Sprache"
     }
