--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -122,7 +122,7 @@
   "accessibility": {
     "accessibility": "Barrierefreiheit",
     "plainLanguage": {
-      "backToTheFuture": "Zurück zur Startseite",
+      "backToTheFuture": "Zurück",
       "header": "Leichte Sprache",
       "content": "Herzlich willkommen.\nDu findest hier Informationen über Dataport in Leichter Sprache.\nAlle Menschen können Texte in Leichter Sprache besser verstehen."
     }
