--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -128,7 +128,7 @@
   "accessibility": {
     "accessibility": "Barrierefreiheit",
     "plainLanguage": {
-      "backToTheFuture": "Zurück zur Startseite",
+      "backToTheFuture": "Zurück",
       "header": "Leichte Sprache",
       "content": "Herzlich willkommen.\nSie finden hier Informationen über Dataport in Leichter Sprache.\nAlle Menschen können Texte in Leichter Sprache besser verstehen."
     }
