feat(DAB-16): change return button to mimic browser return behavior instead of returning to the start

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -170,7 +170,7 @@
       }
     },
     "signLanguage": {
-      "backToTheFuture": "Zurück zur Startseite",
+      "backToTheFuture": "Zurück",
       "content": "An dieser Stelle veröffentlichen wir Informationen zu unserem Webauftritt in Gebärdensprache.",
       "header": "Gebärdensprache",
       "subheader": "Erklärung zur Barrierefreiheit"
