--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -170,7 +170,7 @@
       }
     },
     "signLanguage": {
-      "backToTheFuture": "Zurück zur Startseite",
+      "backToTheFuture": "Zurück",
       "header": "Gebärdensprache",
       "content": "An dieser Stelle veröffentlichen wir Informationen zu unserem Webauftritt in Gebärdensprache.",
       "subheader": "Erklärung zur Barrierefreiheit"
