--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -130,7 +130,7 @@
       "content": "Herzlich willkommen.\nDu findest hier Informationen über Dataport in Leichter Sprache.\nAlle Menschen können Texte in Leichter Sprache besser verstehen."
     },
     "signLanguage": {
-      "backToTheFuture": "Zurück zur Startseite",
+      "backToTheFuture": "Zurück",
       "header": "Gebärdensprache",
       "content": "An dieser Stelle veröffentlichen wir Informationen zu unserem Webauftritt in Gebärdensprache.",
       "subheader": "Erklärung zur Barrierefreiheit"
