--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -111,7 +111,7 @@
     "noStart": "Bitte gib eine gültige Startzeit an. Wenn eine Endezeit angegeben wird, muss eine Startzeit angegeben werden.",
     "inPast": "Bitte gib ein gültiges Startdatum bzw. Startzeitpunkt an. Der Startzeitpunkt muss in der Zukunft liegen.",
     "noValue": "Es muss mindestens eine Terminoption angegeben werden.",
-    "tooMuchValues": "Es dürfen nicht mehr als 100 Terminoptionen angegeben werden."
+    "tooManyValues": "Es dürfen nicht mehr als 100 Terminoptionen angegeben werden."
   },
   "time": {
     "time": "Uhrzeit",
