feat: add confirmation to leave form

--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -7,7 +7,8 @@
     "nextToDateSelection": "Next to date selection",
     "next": "next",
     "revise": "revise",
-    "step": "step"
+    "step": "step",
+    "confirmLeaving": "Return to the home page? Your input may be lost"
   },
   "header": {
     "home": "Homepage",
