--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -7,7 +7,8 @@
     "nextToDateSelection": "Weiter zur Terminauswahl",
     "next": "Weiter",
     "revise": "Überarbeiten",
-    "step": "Schritt"
+    "step": "Schritt",
+    "confirmLeaving": "Zur Startseite zurückkehren? Deine Eingaben gehen möglicherweise verloren"
   },
   "header": {
     "home": "Startseite",
