refactor: update text for successful poll creation

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -192,7 +192,7 @@
     "declaration": "Datenschutzerklärung"
   },
   "links": {
-    "done": "Geschafft!",
+    "done": "Deine Umfrage wurde erstellt!",
     "share": "Teile Deine Umfrage mit dem Titel:",
     "invite": "Mit dem folgenden Link kannst Du weitere Nutzende einladen.",
     "loosingLink": "ACHTUNG: Wenn der Link nicht gespeichert wird, geht er verloren!",
