--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -192,7 +192,7 @@
     "declaration": "Datenschutzerklärung"
   },
   "links": {
-    "done": "Geschafft!",
+    "done": "Ihre Umfrage wurde erstellt!",
     "share": "Teilen Sie Ihre Umfrage mit dem Titel:",
     "invite": "Mit dem folgenden Link können Sie weitere Nutzer einladen.",
     "loosingLink": "ACHTUNG: Wenn der Link nicht gespeichert wird, geht er verloren!",
