feat: add title for edit button
Now screenreaders read the title instead of the img alt text.
- hide img for aria
- add translation

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -49,6 +49,7 @@
     "editSaveLastStep": "In Schritt \"4\" kannst Du alle Änderungen speichern.",
     "answer": "Beantworte die Umfrage von",
     "addParticipant": "Teilnehmende hinzufügen",
+    "editParticipant": "Teilnehmende hinzufügen",
     "noParticipation": "Ich kann nicht teilnehmen",
     "send": "Abschicken",
     "downloadIcs": "Lade dieses Datum als .ics-Datei herunter und importiere es in deinen Kalender. Erfahre in der Beschreibung des Termins, wie die Teilnehmenden abgestimmt haben.",
