--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -49,6 +49,7 @@
     "editSaveLastStep": "In Schritt \"4\" können Sie alle Änderungen speichern.",
     "answer": "Beantworten Sie die Umfrage von",
     "addParticipant": "Teilnehmer:in hinzufügen",
+    "editParticipant": "Teilnehmer:in bearbeiten",
     "noParticipation": "Ich kann nicht teilnehmen",
     "send": "Abschicken",
     "downloadIcs": "Laden Sie dieses Datum als .ics-Datei herunter und importieren Sie es in deinen Kalender. Erfahren Sie in der Beschreibung des Termins, wie die Teilnehmer:innen abgestimmt haben.",
