--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -49,6 +49,7 @@
     "editSaveLastStep": "In step \"4\" you can save your changes.",
     "answer": "Participate at poll of",
     "addParticipant": "Add participant",
+    "editParticipant": "Edit participant",
     "noParticipation": "I can't participate",
     "send": "Send",
     "downloadIcs": "Download this date as .ics-File to import it to your calendar. Check the voting of your participants in the description.",
