--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -46,6 +46,7 @@
     "editSaveLastStep": "In Schritt \"4\" kannst Du all Ännern lagern.",
     "answer": "Beantwoort de Umfraag vun",
     "addParticipant": "Deelnehmer:in tügen",
+    "editParticipant": "Deelnehmer:in ännern",
     "noParticipation": "Ik kann nich deelnehmen",
     "send": "Afschicken",
     "downloadIcs": "Lader vun dissen Dag as ics-Datei dal un importeer dat in dien Kalenner.",
