--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -54,6 +54,7 @@
     "send": "Send",
     "downloadIcs": "Download this date as .ics-File to import it to your calendar. Check the voting of your participants in the description.",
     "downloadCsv": "Download the table of participants and their voting. You can import it into Excel and plan your event.",
+    "downloadCsvDescription": "Download table as csv file",
     "title": {
       "title": "Title",
       "set": "Set a title!",
