fix: add missing translation

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -95,6 +95,7 @@
     "accepted": "zugesagt",
     "questionable": "vorbehaltlich",
     "declined": "abgelehnt",
+    "undefined": "unbekannt",
     "unknown": "unbekannt"
   },
   "date": {
