--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -95,6 +95,7 @@
     "accepted": "accepted",
     "questionable": "questionable",
     "declined": "declined",
+    "undefined": "undefined",
     "unknown": "unknown"
   },
   "date": {
