--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -85,6 +85,7 @@
     "accepted": ".",
     "questionable": ".",
     "declined": ".",
+    "undefined": ".",
     "unknown": "."
   },
   "date": {
