feat: use full date for screenreaders

--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -118,7 +118,9 @@
     "noStart": "Please set a start date. If there is an end date, there has to be a start date.",
     "inPast": "Please enter a valid start date. The start date must be in the future.",
     "noValue": "There must be at least one date.",
-    "tooManyValues": "More than 100 dates are not possible."
+    "tooManyValues": "More than 100 dates are not possible.",
+    "from": "from",
+    "to": "to"
   },
   "time": {
     "time": "Time",
