--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -118,7 +118,9 @@
     "noStart": "Bitte geben Sie eine gültige Startzeit an. Wenn eine Endezeit angegeben wird, muss eine Startzeit angegeben werden.",
     "inPast": "Bitte geben Sie ein gültiges Startdatum bzw. Startzeitpunkt an. Der Startzeitpunkt muss in der Zukunft liegen.",
     "noValue": "Es muss mindestens eine Terminoption angegeben werden.",
-    "tooManyValues": "Es dürfen nicht mehr als 100 Terminoptionen angegeben werden."
+    "tooManyValues": "Es dürfen nicht mehr als 100 Terminoptionen angegeben werden.",
+    "from": "von",
+    "to": "bis"
   },
   "time": {
     "time": "Uhrzeit",
