--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -55,6 +55,7 @@
     "downloadIcs": "Download this date as .ics-File to import it to your calendar. Check the voting of your participants in the description.",
     "downloadCsv": "Download the table of participants and their voting. You can import it into Excel and plan your event.",
     "downloadCsvDescription": "Download table as csv file",
+    "caption": "Appointments overview",
     "title": {
       "title": "Title",
       "set": "Set a title!",
