--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -55,6 +55,7 @@
     "downloadIcs": "Lade dieses Datum als .ics-Datei herunter und importiere es in deinen Kalender. Erfahre in der Beschreibung des Termins, wie die Teilnehmenden abgestimmt haben.",
     "downloadCsv": "Lade die Tabelle der Teilnehmenden mit ihren Entscheidungen herunter. Du kannst sie in Excel importieren, um deine Veranstaltung besser zu planen.",
     "downloadCsvDescription": "Tabelle als csv Datei herunterladen",
+    "caption": "Terminübersicht",
     "title": {
       "title": "Titel",
       "set": "Gib Deiner Umfrage einen Titel!",
