--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -52,6 +52,7 @@
     "downloadIcs": "Lader vun dissen Dag as ics-Datei dal un importeer dat in dien Kalenner.",
     "downloadCsv": "Lader de Tabelle vun alle Deelnehmer mit deren Entscheedungen rünner. De Datei kanns du inn Excel importeern, um dien Veranstaltung bedder to planen",
     "downloadCsvDescription": "Tabelle als csv Datei rünnerladen",
+    "caption": "Terminöversicht",
     "title": {
       "title": "Titel",
       "set": "Geev Diner Umfraag en Titel!",
