feat: accessibility improvements
add scope="col" to table headers;
make first cell of row a row header;
create separate column for action buttons;
remove alt texts for images with aria-hidden set to true;
add title and describedby to buttons;
make delete button pressable by keyboard 'enter';

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -30,6 +30,7 @@
     "testEnvironmentBanner": "Dies ist die Testumgebung von {{value}}. Bitte verwende keine personenbezogenen Daten."
   },
   "poll": {
+    "actions": "Aktionen",
     "poll": "Umfrage",
     "create": "Umfrage erstellen",
     "createNew": "Neue Umfrage erstellen",
@@ -49,6 +50,7 @@
     "editSaveLastStep": "In Schritt \"4\" kannst Du alle Änderungen speichern.",
     "answer": "Beantworte die Umfrage von",
     "addParticipant": "Teilnehmende hinzufügen",
+    "deleteParticipant": "Teilnehmende entfernen",
     "editParticipant": "Teilnehmende hinzufügen",
     "noParticipation": "Ich kann nicht teilnehmen",
     "send": "Abschicken",
