feat: add combobox component
this serves as an aria friendly version of a `<select>`

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -1,6 +1,7 @@
 {
   "lang": {
-    "language": "Sprache"
+    "language": "Sprache",
+    "languageSelect": "Sprachauswahl"
   },
   "navigation": {
     "back": "Zurück",
