--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -1,6 +1,7 @@
 {
   "lang": {
-    "language": "Spraak"
+    "language": "Spraak",
+    "languageSelect": "Spraakutwahl"
   },
   "navigation": {
     "back": "Trügg",
